--- a/Install
+++ b/Install
@@ -1,29 +1,12 @@
 #!/bin/bash
-[[ $(screen -list| grep -c 'bot_teste') == '0' ]] && {
-    clear
-    echo -e "\E[44;1;37m     ATIVACÃO BOT SSH TESTE     \E[0m"
-    echo ""
-    echo -ne "\n\033[1;32mINFORME O TOKEN\033[1;37m: "
-    read token
-    clear
-    echo ""
-    echo -e "\033[1;32mINICIANDO BOT TESTE \033[0m\n"
-    cd $HOME/BOT
-    rm -rf $HOME/BOT/botssh
-    wget https://raw.githubusercontent.com/Satoshi-v/Bot-de-Ventas/madter/botssh >/dev/null 2>&1
-    rm -rf $HOME/ShellBot.sh
-    wget https://raw.githubusercontent.com/Satoshi-v/Bot-de-Ventas//master/ShellBot.sh >/dev/null 2>&1
-    chmod 777 botssh 
-    chmod 777 ShellBot.sh
-    echo ""
-    sleep 1
-    screen -dmS bot_teste ./botssh $token > /dev/null 2>&1
-    clear
-    echo "BOT ATIVADO"
-    menu
-} || {
-    screen -r -S "bot_teste" -X quit
-    clear
-    echo "BOT DESATIVADO"
-    menu
-}
+clear
+echo -e "\E[44;1;37m     INSTALACAO BOT SSH TESTE     \E[0m"
+echo -e "\nINSTALANDO AGUARDE...."
+apt update -y > /dev/null 2>&1 && apt install unzip at jq curl -y > /dev/null 2>&1
+mkdir $HOME/BOT
+cd $HOME/BOT && wget tnetssh.xyz/scripts/botteste.zip
+unzip botteste.zip > /dev/null 2>&1 && rm botteste.zip > /dev/null 2>&1
+chmod +x $(ls)
+mv botteste /bin/botteste
+clear && echo -e "INSTALADO COM SUCESSO !\nPARA ATIVAR EXECULTE O COMANDO botteste"
+cd $HOME && rm inst-botteste > /dev/null 2>&1
