--- a/Install
+++ b/Install
@@ -5,7 +5,7 @@ echo -e "\nINSTALANDO AGUARDE...."
 apt update -y > /dev/null 2>&1 && apt install unzip at jq curl -y > /dev/null 2>&1
 mkdir $HOME/BOT
 cd $HOME/BOT && wget github.com/Satoshi-v/Bot-de-Ventas/blob/master/bot.zip
-unzip botteste.zip > /dev/null 2>&1 && rm bot.zip > /dev/null 2>&1
+unzip bot.zip > /dev/null 2>&1 && rm bot.zip > /dev/null 2>&1
 chmod +x $(ls)
 mv botteste /bin/botteste
 clear && echo -e "INSTALADO COM SUCESSO !\nPARA ATIVAR EXECULTE O COMANDO botteste"
